create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1032,7 +1032,7 @@ section.lazy-placeholder:after {
 .cid-ryzN14gpQ2 {
   padding-top: 105px;
   padding-bottom: 0px;
-  background-color: #197218;
+  background-color: #f90698;
 }
 .cid-ryzN14gpQ2 .mbr-section-subtitle {
   color: #fcff15;
@@ -1154,11 +1154,11 @@ section.lazy-placeholder:after {
 .cid-rzmczF742U {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #197218;
+  background-color: #f90698;
 }
 .cid-rzmczF742U .line {
-  background-color: #0f7d02;
-  color: #0f7d02;
+  background-color: #f90698;
+  color: #f90698;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -1213,7 +1213,7 @@ section.lazy-placeholder:after {
 .cid-rJI7fBS8Pa {
   padding-top: 30px;
   padding-bottom: 0px;
-  background-color: #fb034e;
+  background-color: #ab05dd;
 }
 .cid-rwIRkCyQCI {
   background: #ffffff;
@@ -1329,7 +1329,7 @@ section.lazy-placeholder:after {
 .cid-rrO9cE2B8O {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #197218;
+  background-color: #f90698;
 }
 .cid-rrO9cE2B8O .line {
   background-color: #ffffff;
@@ -1514,7 +1514,7 @@ section.lazy-placeholder:after {
 .cid-rAbuC08xyn {
   padding-top: 15px;
   padding-bottom: 0px;
-  background-color: #0f7d02;
+  background-color: #f90698;
 }
 .cid-rAbuC08xyn H2 {
   color: #ffffff;
@@ -1572,7 +1572,7 @@ section.lazy-placeholder:after {
 .cid-rwJp7kd3l1 {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #232323;
+  background-color: #e40f4f;
 }
 @media (min-width: 992px) {
   .cid-rwJp7kd3l1 .mbr-figure {
@@ -1590,11 +1590,11 @@ section.lazy-placeholder:after {
 .cid-rwJpPqf9T9 {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #ff8509;
+  background-color: #f90698;
 }
 .cid-rwJpPqf9T9 .line {
-  background-color: #ff952a;
-  color: #ff952a;
+  background-color: #f90698;
+  color: #f90698;
   align: center;
   height: 2px;
   margin: 0 auto;
@@ -1650,7 +1650,7 @@ section.lazy-placeholder:after {
   padding-right: 1rem;
 }
 .cid-rwOL87IRSc H4 {
-  color: #ff8000;
+  color: #f90698;
 }
 .cid-rwOL87IRSc .panel-text {
   color: #1b160e;
@@ -1694,7 +1694,7 @@ section.lazy-placeholder:after {
   padding-right: 1rem;
 }
 .cid-rykDeQKmiF H4 {
-  color: #ff8000;
+  color: #f90698;
 }
 .cid-rykDeQKmiF .panel-text {
   color: #232323;
@@ -1702,7 +1702,7 @@ section.lazy-placeholder:after {
 .cid-rwOPeskq89 {
   padding-top: 60px;
   padding-bottom: 60px;
-  background-color: #fc8807;
+  background-color: #f90698;
 }
 @media (min-width: 992px) {
   .cid-rwOPeskq89 .mbr-figure {
@@ -2104,6 +2104,11 @@ section.lazy-placeholder:after {
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 992px) {
+  .cid-rwOUlwEkR6 .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-rwOUlwEkR6 .collapsed button.navbar-toggler {
   display: block;
@@ -2585,6 +2590,11 @@ section.lazy-placeholder:after {
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
 .cid-rwOUlwEkR6 .collapsed .navbar-collapse.show .navbar-buttons:last-child {
   margin-bottom: 1rem;
+}
+@media (min-width: 992px) {
+  .cid-rwOUlwEkR6 .collapsed:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 3.8rem);
+  }
 }
 .cid-rwOUlwEkR6 .collapsed button.navbar-toggler {
   display: block;
