--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1086,15 +1086,6 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
-.cid-rWbDyPM8OC {
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color: #ffffff;
-}
-.cid-rWbDyPM8OC .mbr-section {
-  text-align: center;
-  color: #fff;
-}
 .cid-rJI49xe5ss {
   padding-top: 0px;
   padding-bottom: 0px;
@@ -1213,7 +1204,7 @@ section.lazy-placeholder:after {
 .cid-rScQl2yZ6Z {
   padding-top: 30px;
   padding-bottom: 30px;
-  background-color: #232323;
+  background-color: #2de65e;
 }
 .cid-rScQl2yZ6Z .line {
   background-color: #232323;
@@ -1236,18 +1227,18 @@ section.lazy-placeholder:after {
 .cid-rzmczF742U {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #f90698;
+  background-color: #ffffff;
 }
 .cid-rzmczF742U .line {
-  background-color: #f90698;
-  color: #f90698;
+  background-color: #ffffff;
+  color: #ffffff;
   align: center;
   height: 2px;
   margin: 0 auto;
 }
 .cid-rzmczF742U .section-text {
   padding: 2rem 0;
-  color: #ffffff;
+  color: #232323;
 }
 .cid-rzmczF742U .inner-container {
   margin: 0 auto;
