--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -623,14 +623,25 @@ iframe.lazy-placeholder,
 section.lazy-placeholder:after {
   opacity: 0.3;
 }
+.cid-rYa2L75v9R {
+  padding-top: 105px;
+  padding-bottom: 45px;
+  background-color: #036b01;
+}
+.cid-rYa2L75v9R .mbr-section-subtitle {
+  color: #fcff15;
+}
+.cid-rYa2L75v9R H2 {
+  color: #ffffff;
+}
 .cid-rwOUlwEkR6 .navbar {
   padding: .5rem 0;
-  background: #ffffff;
+  background: #232323;
   transition: none;
   min-height: 77px;
 }
 .cid-rwOUlwEkR6 .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rwOUlwEkR6 a {
   font-style: normal;
@@ -721,7 +732,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rwOUlwEkR6 .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1033,7 +1044,7 @@ section.lazy-placeholder:after {
 .cid-ryzN14gpQ2 {
   padding-top: 105px;
   padding-bottom: 30px;
-  background-color: #232323;
+  background-color: #218104;
 }
 .cid-ryzN14gpQ2 .mbr-section-subtitle {
   color: #f7ed4a;
@@ -1066,10 +1077,10 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rY8K7L4yQL {
-  background: #465052;
+  background: #218104;
   padding-top: 30px;
   padding-bottom: 30px;
-  background: linear-gradient(0deg, #465052, #232323);
+  background: linear-gradient(0deg, #218104, #218104);
 }
 .cid-rY8K7L4yQL .video-block {
   margin: auto;
@@ -1082,7 +1093,7 @@ section.lazy-placeholder:after {
 .cid-rJI49xe5ss {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #232323;
+  background-color: #218104;
 }
 .cid-rJI49xe5ss .line {
   background-color: #149dcc;
@@ -1124,10 +1135,57 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-rYa3t28bPA {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #218104;
+}
+.cid-rYa3t28bPA .line {
+  background-color: #149dcc;
+  color: #149dcc;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rYa3t28bPA .section-text {
+  padding: 2rem 0;
+  color: #ffffff;
+}
+.cid-rYa3t28bPA .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rYa3t28bPA .inner-container {
+    width: 100% !important;
+  }
+}
+.cid-rYa2AGdXHu {
+  padding-top: 0px;
+  padding-bottom: 30px;
+  background-color: #ffffff;
+}
+.cid-rYa2AGdXHu .line {
+  background-color: #ffffff;
+  color: #ffffff;
+  align: center;
+  height: 2px;
+  margin: 0 auto;
+}
+.cid-rYa2AGdXHu .section-text {
+  padding: 2rem 0;
+}
+.cid-rYa2AGdXHu .inner-container {
+  margin: 0 auto;
+}
+@media (max-width: 768px) {
+  .cid-rYa2AGdXHu .inner-container {
+    width: 100% !important;
+  }
+}
 .cid-rrO9cE2B8O {
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #6b018b;
+  background-color: #218104;
 }
 .cid-rrO9cE2B8O .line {
   background-color: #ffffff;
@@ -1182,7 +1240,7 @@ section.lazy-placeholder:after {
   background-color: #ffffff;
 }
 .cid-rAz4jhjmjW .card-box {
-  background-color: #ff952a;
+  background-color: #efefef;
   padding: 2rem;
 }
 .cid-rAz4jhjmjW h4 {
@@ -1907,12 +1965,12 @@ section.lazy-placeholder:after {
 }
 .cid-rwOUlwEkR6 .navbar {
   padding: .5rem 0;
-  background: #ffffff;
+  background: #232323;
   transition: none;
   min-height: 77px;
 }
 .cid-rwOUlwEkR6 .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rwOUlwEkR6 a {
   font-style: normal;
@@ -2003,7 +2061,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rwOUlwEkR6 .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2393,12 +2451,12 @@ section.lazy-placeholder:after {
 }
 .cid-rwOUlwEkR6 .navbar {
   padding: .5rem 0;
-  background: #ffffff;
+  background: #232323;
   transition: none;
   min-height: 77px;
 }
 .cid-rwOUlwEkR6 .navbar-dropdown.bg-color.transparent.opened {
-  background: #ffffff;
+  background: #232323;
 }
 .cid-rwOUlwEkR6 a {
   font-style: normal;
@@ -2489,7 +2547,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-rwOUlwEkR6 .dropdown .dropdown-menu {
-  background: #ffffff;
+  background: #232323;
   display: none;
   position: absolute;
   min-width: 5rem;
